--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -44,7 +44,7 @@
 #sliding-content {
 	position:fixed;
 	left:100%;
-	top:2em;
+	top:2.6em;
 	transform:translate(0%);
 	transition: all 0.25s ease;
 	width:100%;
@@ -60,23 +60,24 @@
 	height:100%;
 	float:left;
 	background:#fff;
-	overflow:scroll;
 	box-sizing:border-box;
 }
 
 #top-header {
-	height:2em;
-	background-color: black;
+	height:2.6em;
+	background-color:#31398f;
 	color:white;
 }
 
 #top-header > a {
 	height:100%;
-	min-width:2em;
+	min-width:4em;
+	background-color:rgba(255, 255, 255, 0.2);
 	display:block;
 	float:left;
 	color:white;
 	text-decoration:none;
+	margin-right:10px;
 }
 
 #main {
